# estudosDjango

./: pyproject.toml  requirements.txt
core/: admin.py  models.py  serializer.py  views.py
core/migrations/: 0001_initial.py  0002_autor.py  0003_alter_autor_options_livro.py  0004_livro_autores.py  0005_compra.py  0006_itenscompra.py
core/views/: __init__.py  autor.py  categoria.py  categoriaApiView.py  categoriaClass.py  categoriaGeneric.py  compra.py  editora.py  livro.py  testesInicias.py
livraria/: settings.py  urls.py
